# popen3

./: .gitignore  CMakeLists.txt  README.md  popen3.c  popen3.h
test/: CMakeLists.txt  main.c  test.c  test.h
test/cases/: echo.c  envp_empty.c  envp_inherit.c
test/tools/: __init__.c  __init__.h  echo.c  envp.c  sha256.c
